--- a/src/pages/auth/sign-in/sign-in.html
+++ b/src/pages/auth/sign-in/sign-in.html
@@ -4,11 +4,11 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Home Page
+      Sign In
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <p>This is my HomePage.</p>
+  <p>This is my SignInPage.</p>
 </ion-content>
