--- a/src/pages/auth/sign-in/sign-in.html
+++ b/src/pages/auth/sign-in/sign-in.html
@@ -10,5 +10,18 @@
 </ion-header>
 
 <ion-content padding>
-  <p>This is my SignInPage.</p>
+  <form #f="ngForm" (ngSubmit)="onSignIn(f)">
+    <ion-list>
+      <ion-item>
+        <ion-label floating>E-mail address</ion-label>
+        <ion-input type="email" ngModel name="email" required></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>Password</ion-label>
+        <ion-input type="password" ngModel name="password" required [minlength]="6"></ion-input>
+      </ion-item>
+    </ion-list>
+    <button ion-button block type="submit" [disabled]="f.invalid">Sign Up</button>
+    <p text-center>{{errorMessage}}</p>
+  </form>
 </ion-content>
